<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>pawg.fastutil</groupId>
    <artifactId>tornadovm-gpu</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>tornadovm-gpu</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>6.1.3</junit.version>
        <maven.compiler.release>25</maven.compiler.release>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>25.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>25.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.2.4</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.bootstrapfx</groupId>
            <artifactId>bootstrapfx-core</artifactId>
            <version>0.4.0</version>
        </dependency>

        <dependency>
            <groupId>io.github.beehive-lab</groupId>
            <artifactId>tornado-api</artifactId>
            <version>5.2.0-jdk25</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running with: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <!--<configuration>
                            <mainClass>pawg.Launcher</mainClass>
                            <options>
                                <option>@${env.TORNADOVM_HOME}/tornado-argfile</option>
                                <option>&#45;&#45;add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</option>
                                <option>&#45;&#45;add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</option>
                                <option>-Dtornado.enable.profiling=True</option>
                            </options>
                        </configuration>-->
                        <configuration>
                            <mainClass>pawg.Launcher</mainClass>
                            <runtimePathOption>CLASSPATH</runtimePathOption>
                            <options>
                                <option>@${env.TORNADOVM_HOME}/tornado-argfile</option>
                                <option>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</option>
                                <option>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</option>
                                <option>-Dtornado.enable.profiling=True</option>
                                <option>--enable-native-access=ALL-UNNAMED</option>
                            </options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>pawg.Launcher</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
